--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "sok.h": "c",
         "encoder.h": "c",
         "time.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "hiredis.h": "c",
+        "inet.h": "c",
+        "curl.h": "c"
     }
 }
